--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,13 @@ gunicorn
 flask_sqlalchemy
 flask_login
 Flask-Migrate
+
+
+Flask==3.0.3
+Flask-SQLAlchemy==3.1.1
+Flask-Migrate==4.0.7
+SQLAlchemy==2.0.34
+Werkzeug==3.0.3
+matplotlib==3.9.2
+gunicorn==23.0.0
+Jinja2==3.1.4
